--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
         </div>
       </div>
       <div class="create_act">
-        <p>New to GitHub? <a href="#">Create an account.</a></p>
+        <p>
+          New to GitHub?
+          <a href="https://github.com/signup">Create an account.</a>
+        </p>
       </div>
       <div class="footer">
         <ul>
