Added hyperlinks everywhere except forget pwd

--- a/index.html
+++ b/index.html
@@ -55,10 +55,22 @@
       </div>
       <div class="footer">
         <ul>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Security</a></li>
-          <li><a href="#">Contact GitHub</a></li>
+          <li>
+            <a
+              href="https://docs.github.com/en/github/site-policy/github-terms-of-service"
+              >Terms</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://docs.github.com/en/github/site-policy/github-privacy-statement"
+              >Privacy</a
+            >
+          </li>
+          <li><a href="https://github.com/security">Security</a></li>
+          <li>
+            <a href="https://support.github.com/request">Contact GitHub</a>
+          </li>
         </ul>
       </div>
     </div>
