--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="img/PNG/GitHub-Mark-32px.png"
+      href="../img/PNG/GitHub-Mark-32px.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
@@ -15,12 +15,12 @@
   <body>
     <div class="wrapper">
       <div class="logo">
-        <img src="img/PNG/GitHub-Mark-120px-plus.png" alt="GitHub" />
+        <img src="../img/PNG/GitHub-Mark-120px-plus.png" alt="GitHub" />
       </div>
       <div class="form">
         <div class="rds-logo">
           <img
-            src="img/PNG/Real-Dev-Squad@1x.png"
+            src="../img/PNG/Real-Dev-Squad@1x.png"
             alt="RDS-logo"
             class="rds-img"
           />
