--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 			// Enabling the debug mode flag is useful during implementation,
 			// but it's recommended you remove it for production
 		</script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 		<script type="module" src="script.js"></script>
 	</head>
 	<body>
