--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="logo">
 				<img src="../img/PNG/GitHub-Mark-120px-plus.png" alt="GitHub" />
 			</div>
-			<div class="form">
+			<form class="form">
 				<div class="rds-logo">
 					<img
 						src="../img/PNG/Real-Dev-Squad@1x.png"
@@ -121,7 +121,7 @@
 						<input type="submit" value="Sign in" class="sign_btn" id="signin" />
 					</div>
 				</div>
-			</div>
+			</form>
 			<div class="create_act">
 				<p>
 					New to GitHub?
